CSS - Ensure input field value don't overflow with text-zoom at 200% (#8686)
* CSS: added 2 rules to the form-control class

Addresses the issue #8492. Fixes the elements using this class.

* CSS: added 2 rules to input element

Addresses the issue #8492

Approved at the technical review meeting

--- a/src/base/bootstrap-overrides/_base.scss
+++ b/src/base/bootstrap-overrides/_base.scss
@@ -575,9 +575,17 @@ blockquote {
  *	Default should be representative of the expected length of input.
  *	Full width should be only for cases when the expected length of input is
  *	greater than the available width.
+ *  height:37px; rule of Bootstrap was overwritten by height: auto; first
+ *  then a min-height specified, in order to address the issue #8492. July 2019.
  */
+input[type=button], input[type=reset], input[type=submit] {
+	height: auto;
+	min-height: 37px;
+}
 .form-control {
+	height: auto;
 	max-width: 100%;
+	min-height: 37px;
 	width: auto;
 }
 
